--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -1223,6 +1223,13 @@
 "mining.staking.page.withdraw.page.alert.message" = "可取回抵押金额：%@ VITE\n取回需经过7天到账";
 "mining.staking.page.withdraw.page.alert.ok" = "确认取回";
 
+"mining.staking.page.confirm.title" = "抵押VITE挖礦";
+"mining.staking.page.confirm.available.title" = "交易所可用餘額";
+"mining.staking.page.confirm.amount.title" = "抵押金額";
+"mining.staking.page.confirm.amount.placeholder" = "請輸入抵押金額，最少134VITE";
+"mining.staking.page.confirm.tip" = "提交抵押後立即開始挖礦，3天后可取回；每天中午12點發放挖礦VX收益；取回VITE需經過7個週期(7天)到賬。";
+"mining.staking.page.confirm.button.title" = "提交抵押";
+
 "mining.invite.page.header.total.earnings" = "邀请挖矿总收益(VX)";
 "mining.invite.page.detail.count.title" = "邀请人数";
 "mining.invite.page.detail.trading.title" = "邀请交易挖矿收益";
@@ -1232,12 +1239,8 @@
 "mining.invite.page.list.market.making.title" = "邀请挂单挖矿明细";
 "mining.invite.page.cell.per" = "占比";
 
-"mining.staking.page.confirm.title" = "抵押VITE挖礦";
-"mining.staking.page.confirm.available.title" = "交易所可用餘額";
-"mining.staking.page.confirm.amount.title" = "抵押金額";
-"mining.staking.page.confirm.amount.placeholder" = "請輸入抵押金額，最少134VITE";
-"mining.staking.page.confirm.tip" = "提交抵押後立即開始挖礦，3天后可取回；每天中午12點發放挖礦VX收益；取回VITE需經過7個週期(7天)到賬。";
-"mining.staking.page.confirm.button.title" = "提交抵押";
+"mining.order.page.header.total.earnings" = "挂单挖矿总收益(VX)";
+"mining.order.page.header.estimate" = "预计今日可挖";
 
 // Spot
 "spot.page.buy.mining.tip" = "買入價大於 %@ 時滿足掛單挖礦條件";
