--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -1178,92 +1178,92 @@
 "trading.home.page.segment.bonus" = "Dividend";
 
 // Mining Home
-"mining.page.segment.trading" = "交易挖礦";
-"mining.page.segment.staking" = "抵押挖礦";
-"mining.page.segment.invite" = "邀請挖礦";
-"mining.page.segment.making" = "掛單挖礦";
+"mining.page.segment.trading" = "Trading";
+"mining.page.segment.staking" = "Staking";
+"mining.page.segment.invite" = "Referral";
+"mining.page.segment.making" = "Market-Making";
 
-"mining.page.header.total.real.time" = "實時數據";
-"mining.page.list.title" = "挖礦明細";
+"mining.page.header.total.real.time" = "Live Mining Dashboard";
+"mining.page.list.title" = "Mining History";
 
-"mining.trading.page.header.total.earnings" = "交易挖礦總收益(VX)";
-"mining.trading.page.header.total.earnings.alert.title" = "說明";
-"mining.trading.page.header.total.earnings.alert.message" = "當前頁面展示的手續費花銷僅為平台基礎手續費0.2%，實際估算挖礦成本時請注意不同交易對的運營手續費";
+"mining.trading.page.header.total.earnings" = "Total Income (VX)";
+"mining.trading.page.header.total.earnings.alert.title" = "Notice";
+"mining.trading.page.header.total.earnings.alert.message" = "Current trading fees displayed on this page contains only the 0.2% ViteX base transaction fees, please note that operator fees shall be taken into consideration when calculating mining cost";
 
 
-"mining.trading.page.header.fee" = "手續費";
-"mining.trading.page.header.title" = "挖礦";
-"mining.trading.page.header.expect" = "預計挖礦";
+"mining.trading.page.header.fee" = "Trading Fees";
+"mining.trading.page.header.title" = "Mining";
+"mining.trading.page.header.expect" = "24H Expected Mined";
 
-"mining.trading.page.cell.fee" = "手續費金額";
+"mining.trading.page.cell.fee" = "Fees";
 
-"mining.staking.page.header.total.earnings" = "抵押挖礦總收益(VX)";
-"mining.staking.page.detail.amount.title" = "抵押金額";
-"mining.staking.page.detail.unlocking.title" = "解鎖中的金額";
-"mining.staking.page.detail.add.button.title" = "增加";
-"mining.staking.page.detail.list.button.title" = "取回列表";
-"mining.staking.page.cell.amount" = "抵押";
+"mining.staking.page.header.total.earnings" = "Total Income (VX)";
+"mining.staking.page.detail.amount.title" = "Staked Amount";
+"mining.staking.page.detail.unlocking.title" = "Unlocking Amount";
+"mining.staking.page.detail.add.button.title" = "Add";
+"mining.staking.page.detail.list.button.title" = "Staking List";
+"mining.staking.page.cell.amount" = "Stake";
 
-"mining.staking.page.withdraw.page.title" = "取回列表";
-"mining.staking.page.withdraw.page.height" = "到期快照块高度 %@";
-"mining.staking.page.withdraw.page.withdraw.time" = "预计可取回时间 %@";
-"mining.staking.page.withdraw.page.lock.time" = "预计解锁时间 %@";
-"mining.staking.page.withdraw.page.button.title" = "取回";
-"mining.staking.page.withdraw.page.button.dis.title" = "解锁中";
+"mining.staking.page.withdraw.page.title" = "Withdrawal List";
+"mining.staking.page.withdraw.page.height" = "Lock Expiration Snapshot Height: %@";
+"mining.staking.page.withdraw.page.withdraw.time" = "Lock Expiration Date: %@";
+"mining.staking.page.withdraw.page.lock.time" = "Available Date: %@";
+"mining.staking.page.withdraw.page.button.title" = "Unstake";
+"mining.staking.page.withdraw.page.button.dis.title" = "In process";
 
-"mining.staking.page.withdraw.page.alert.title" = "取回抵押VITE";
-"mining.staking.page.withdraw.page.alert.message" = "可取回抵押金额：%@ VITE\n取回需经过7天到账";
-"mining.staking.page.withdraw.page.alert.ok" = "确认取回";
+"mining.staking.page.withdraw.page.alert.title" = "Unstake VITE";
+"mining.staking.page.withdraw.page.alert.message" = "Available Stake Balance：%@ VITE\n It takes 7 days to return unstaked VITE coins to exchange balance";
+"mining.staking.page.withdraw.page.alert.ok" = "Unstake";
 
-"mining.staking.page.confirm.title" = "抵押VITE挖礦";
-"mining.staking.page.confirm.available.title" = "交易所可用餘額";
-"mining.staking.page.confirm.amount.title" = "抵押金額";
-"mining.staking.page.confirm.amount.placeholder" = "請輸入抵押金額，最少134VITE";
-"mining.staking.page.confirm.tip" = "提交抵押後立即開始挖礦，3天后可取回；每天中午12點發放挖礦VX收益；取回VITE需經過7個週期(7天)到賬。";
-"mining.staking.page.confirm.button.title" = "提交抵押";
+"mining.staking.page.confirm.title" = "Stake VITE for Mining";
+"mining.staking.page.confirm.available.title" = "Exchange Available Balance";
+"mining.staking.page.confirm.amount.title" = "Amount";
+"mining.staking.page.confirm.amount.placeholder" = "Please input amount, minimum 134 VITE";
+"mining.staking.page.confirm.tip" = "Staking can be canceled after 3 days. Staked amount will be released after the 7-day waiting period";
+"mining.staking.page.confirm.button.title" = "Confirm to Stake";
 
-"mining.invite.page.header.total.earnings" = "邀请挖矿总收益(VX)";
-"mining.invite.page.detail.count.title" = "邀请人数";
-"mining.invite.page.detail.trading.title" = "邀请交易挖矿收益";
-"mining.invite.page.detail.market.making.title" = "邀请挂单挖矿收益";
-"mining.invite.page.list.trading.title" = "邀请交易挖矿明细";
-"mining.invite.page.cell.fee.amount" = "交易手续费金额";
-"mining.invite.page.list.market.making.title" = "邀请挂单挖矿明细";
-"mining.invite.page.cell.per" = "占比";
+"mining.invite.page.header.total.earnings" = "Total Income (VX)";
+"mining.invite.page.detail.count.title" = "Referrals";
+"mining.invite.page.detail.trading.title" = "Referred Trading Proceeds";
+"mining.invite.page.detail.market.making.title" = "Referred Market-Making Proceeds";
+"mining.invite.page.list.trading.title" = "Referred Trading Details";
+"mining.invite.page.cell.fee.amount" = "Trading Fees";
+"mining.invite.page.list.market.making.title" = "Referred Market-Making Details";
+"mining.invite.page.cell.per" = "Ratio";
 
-"mining.order.page.header.total.earnings" = "挂单挖矿总收益(VX)";
-"mining.order.page.header.estimate" = "预计今日可挖";
+"mining.order.page.header.total.earnings" = "Total Income (VX)";
+"mining.order.page.header.estimate" = "24H Expected Mined";
 
-"dividends.page.title" = "分红";
-"dividends.page.total.title" = "分红池(BTC)";
-"dividends.page.my.title" = "我的分红(BTC)";
-"dividends.page.lock.amount" = "锁仓金额";
-"dividends.page.unlocking.amount" = "解锁中金额";
-"dividends.page.lock.auto" = "开启自动锁仓";
-"dividends.page.lock.detail.button.title" = "查看解锁明细";
-"dividends.page.lock.lock.button.title" = "锁仓";
-"dividends.page.lock.unlock.button.title" = "解锁";
-"dividends.page.lock.header.title" = "分红明细";
-"dividends.page.lock.cell.total" = "合计：≈";
+"dividends.page.title" = "Dividend";
+"dividends.page.total.title" = "Dividend Pool (BTC)";
+"dividends.page.my.title" = "My Dividend (BTC)";
+"dividends.page.lock.amount" = "Staking Amount";
+"dividends.page.unlocking.amount" = "Unstaking Amount";
+"dividends.page.lock.auto" = "Automatic Staking";
+"dividends.page.lock.detail.button.title" = "Unstaking Status";
+"dividends.page.lock.lock.button.title" = "Stake";
+"dividends.page.lock.unlock.button.title" = "Unstake";
+"dividends.page.lock.header.title" = "Dividend Details";
+"dividends.page.lock.cell.total" = "Total: ≈";
 
-"dividends.page.lock.confirm.title" = "锁仓VX";
-"dividends.page.lock.confirm.amount.total" = "交易所可用余额";
-"dividends.page.lock.confirm.amount" = "锁仓金额";
-"dividends.page.lock.confirm.placeholder" = "请输入锁仓金额，最少1VX";
-"dividends.page.lock.confirm.error" = "最少1VX";
-"dividends.page.lock.confirm.tip" = "提交抵押后立即开始挖矿，3天后可取回；每天中午12点发放挖矿VX收益；取回VITE需经过7个周期(7天)到账";
-"dividends.page.lock.confirm.button.title" = "确认锁仓";
+"dividends.page.lock.confirm.title" = "Stake VX";
+"dividends.page.lock.confirm.amount.total" = "Exchange Available Balance";
+"dividends.page.lock.confirm.amount" = "Amount";
+"dividends.page.lock.confirm.placeholder" = "Please input amount, minimum 1 VX";
+"dividends.page.lock.confirm.error" = "Minimum 1 VX";
+"dividends.page.lock.confirm.tip" = "A minimum of 10 VX must be staked to receive dividends. Submission of staking request allows for dividends starting the nearest distribution";
+"dividends.page.lock.confirm.button.title" = "Stake";
 
-"dividends.page.unlock.confirm.title" = "解锁VX";
-"dividends.page.unlock.confirm.amount.total" = "可解锁余额";
-"dividends.page.unlock.confirm.amount" = "解锁金额";
-"dividends.page.unlock.confirm.placeholder" = "请输入解锁金额，最少1VX";
-"dividends.page.unlock.confirm.error" = "最少1VX";
-"dividends.page.unlock.confirm.tip" = "解锁需约7天时间到账";
-"dividends.page.unlock.confirm.button.title" = "确认解锁";
+"dividends.page.unlock.confirm.title" = "Unstake VX";
+"dividends.page.unlock.confirm.amount.total" = "Available Stake Balance";
+"dividends.page.unlock.confirm.amount" = "Amount";
+"dividends.page.unlock.confirm.placeholder" = "Please input amount, minimum 1 VX";
+"dividends.page.unlock.confirm.error" = "Minimum 1 VX";
+"dividends.page.unlock.confirm.tip" = "It takes about 7 days to unlock";
+"dividends.page.unlock.confirm.button.title" = "Unstake";
 
-"dividends.page.unlock.list.title" = "解锁明细";
-"dividends.page.unlock.list.time" = "到期时间 %@";
+"dividends.page.unlock.list.title" = "Unstaking Status";
+"dividends.page.unlock.list.time" = "Available Date %@";
 
 // Spot
 "spot.page.buy.mining.tip" = "Eligible for mining when price is greater than %@";
