--- a/ViteBusiness/Assets/tr-TR.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/tr-TR.lproj/Localizable.strings
@@ -1178,39 +1178,92 @@
 "trading.home.page.segment.bonus" = "Kar payı";
 
 // Mining Home
-"mining.page.segment.trading" = "xxxxx";
-"mining.page.segment.staking" = "xxxxx";
-"mining.page.segment.invite" = "xxxxx";
-"mining.page.segment.making" = "xxxxx";
+"mining.page.segment.trading" = "Trading";
+"mining.page.segment.staking" = "Staking";
+"mining.page.segment.invite" = "Referral";
+"mining.page.segment.making" = "Market-Making";
 
-"mining.page.header.total.real.time" = "xxxxx";
-"mining.page.list.title" = "xxxxx";
+"mining.page.header.total.real.time" = "Live Mining Dashboard";
+"mining.page.list.title" = "Mining History";
 
-"mining.trading.page.header.total.earnings" = "xxxxx";
-"mining.trading.page.header.total.earnings.alert.title" = "xxxxx";
-"mining.trading.page.header.total.earnings.alert.message" = "xxxxx";
+"mining.trading.page.header.total.earnings" = "Total Income (VX)";
+"mining.trading.page.header.total.earnings.alert.title" = "Notice";
+"mining.trading.page.header.total.earnings.alert.message" = "Current trading fees displayed on this page contains only the 0.2% ViteX base transaction fees, please note that operator fees shall be taken into consideration when calculating mining cost";
 
 
-"mining.trading.page.header.fee" = "xxxxx";
-"mining.trading.page.header.title" = "xxxxx";
-"mining.trading.page.header.expect" = "xxxxx";
+"mining.trading.page.header.fee" = "Trading Fees";
+"mining.trading.page.header.title" = "Mining";
+"mining.trading.page.header.expect" = "24H Expected Mined";
 
-"mining.trading.page.cell.fee" = "xxxxx";
+"mining.trading.page.cell.fee" = "Fees";
 
-"mining.staking.page.header.total.earnings" = "xxxxx";
-"mining.staking.page.detail.title" = "xxxxx";
-"mining.staking.page.detail.amount.title" = "xxxxx";
-"mining.staking.page.detail.unlocking.title" = "xxxxx";
-"mining.staking.page.detail.add.button.title" = "xxxxx";
-"mining.staking.page.detail.list.button.title" = "xxxxx";
-"mining.staking.page.cell.amount" = "xxxxx";
+"mining.staking.page.header.total.earnings" = "Total Income (VX)";
+"mining.staking.page.detail.amount.title" = "Staked Amount";
+"mining.staking.page.detail.unlocking.title" = "Unlocking Amount";
+"mining.staking.page.detail.add.button.title" = "Add";
+"mining.staking.page.detail.list.button.title" = "Staking List";
+"mining.staking.page.cell.amount" = "Stake";
 
-"mining.staking.page.confirm.title" = "xxxxx";
-"mining.staking.page.confirm.available.title" = "xxxxx";
-"mining.staking.page.confirm.amount.title" = "xxxxx";
-"mining.staking.page.confirm.amount.placeholder" = "xxxxx";
-"mining.staking.page.confirm.tip" = "xxxxx";
-"mining.staking.page.confirm.button.title" = "xxxxx";
+"mining.staking.page.withdraw.page.title" = "Withdrawal List";
+"mining.staking.page.withdraw.page.height" = "Lock Expiration Snapshot Height: %@";
+"mining.staking.page.withdraw.page.withdraw.time" = "Lock Expiration Date: %@";
+"mining.staking.page.withdraw.page.lock.time" = "Available Date: %@";
+"mining.staking.page.withdraw.page.button.title" = "Unstake";
+"mining.staking.page.withdraw.page.button.dis.title" = "In process";
+
+"mining.staking.page.withdraw.page.alert.title" = "Unstake VITE";
+"mining.staking.page.withdraw.page.alert.message" = "Available Stake Balance：%@ VITE\n It takes 7 days to return unstaked VITE coins to exchange balance";
+"mining.staking.page.withdraw.page.alert.ok" = "Unstake";
+
+"mining.staking.page.confirm.title" = "Stake VITE for Mining";
+"mining.staking.page.confirm.available.title" = "Exchange Available Balance";
+"mining.staking.page.confirm.amount.title" = "Amount";
+"mining.staking.page.confirm.amount.placeholder" = "Please input amount, minimum 134 VITE";
+"mining.staking.page.confirm.tip" = "Staking can be canceled after 3 days. Staked amount will be released after the 7-day waiting period";
+"mining.staking.page.confirm.button.title" = "Confirm to Stake";
+
+"mining.invite.page.header.total.earnings" = "Total Income (VX)";
+"mining.invite.page.detail.count.title" = "Referrals";
+"mining.invite.page.detail.trading.title" = "Referred Trading Proceeds";
+"mining.invite.page.detail.market.making.title" = "Referred Market-Making Proceeds";
+"mining.invite.page.list.trading.title" = "Referred Trading Details";
+"mining.invite.page.cell.fee.amount" = "Trading Fees";
+"mining.invite.page.list.market.making.title" = "Referred Market-Making Details";
+"mining.invite.page.cell.per" = "Ratio";
+
+"mining.order.page.header.total.earnings" = "Total Income (VX)";
+"mining.order.page.header.estimate" = "24H Expected Mined";
+
+"dividends.page.title" = "Dividend";
+"dividends.page.total.title" = "Dividend Pool (BTC)";
+"dividends.page.my.title" = "My Dividend (BTC)";
+"dividends.page.lock.amount" = "Staking Amount";
+"dividends.page.unlocking.amount" = "Unstaking Amount";
+"dividends.page.lock.auto" = "Automatic Staking";
+"dividends.page.lock.detail.button.title" = "Unstaking Status";
+"dividends.page.lock.lock.button.title" = "Stake";
+"dividends.page.lock.unlock.button.title" = "Unstake";
+"dividends.page.lock.header.title" = "Dividend Details";
+"dividends.page.lock.cell.total" = "Total: ≈";
+
+"dividends.page.lock.confirm.title" = "Stake VX";
+"dividends.page.lock.confirm.amount.total" = "Exchange Available Balance";
+"dividends.page.lock.confirm.amount" = "Amount";
+"dividends.page.lock.confirm.placeholder" = "Please input amount, minimum 1 VX";
+"dividends.page.lock.confirm.error" = "Minimum 1 VX";
+"dividends.page.lock.confirm.tip" = "A minimum of 10 VX must be staked to receive dividends. Submission of staking request allows for dividends starting the nearest distribution";
+"dividends.page.lock.confirm.button.title" = "Stake";
+
+"dividends.page.unlock.confirm.title" = "Unstake VX";
+"dividends.page.unlock.confirm.amount.total" = "Available Stake Balance";
+"dividends.page.unlock.confirm.amount" = "Amount";
+"dividends.page.unlock.confirm.placeholder" = "Please input amount, minimum 1 VX";
+"dividends.page.unlock.confirm.error" = "Minimum 1 VX";
+"dividends.page.unlock.confirm.tip" = "It takes about 7 days to unlock";
+"dividends.page.unlock.confirm.button.title" = "Unstake";
+
+"dividends.page.unlock.list.title" = "Unstaking Status";
+"dividends.page.unlock.list.time" = "Available Date %@";
 
 // Spot
 "spot.page.buy.mining.tip" = "Fiyat %@'den yüksek olduğu zaman madencilik için uygundur";
