--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -21,10 +21,10 @@
 "discover.page.news.cell.time.hour"="%@h ago";
 "discover.page.news.cell.time.day"="%@d ago";
 "discover.page.headerTitle.activity"="Campaign Center";
-"discover.page.headerTitle.game"="Vite Games";
+"discover.page.headerTitle.game"="dApp";
 "discover.page.headerTitle.news"="Vite News";
 "discover.page.VCWebTitle.activity"="Vite Events";
-"discover.page.VCWebTitle.game"="Vite Games";
+"discover.page.VCWebTitle.game"="dApp";
 "discover.page.VCWebTitle.news"="Vite News";
 "discover.page.game.alter.title"="You have visited a page which leaves Vite App, and you will be redirected to a third party dApp. Your use on this dApp will abide by the dApp's Term of User Agreement and Privacy Policy. Vite Labs has no supervision or control over the quality, content, reliability or security of the third party dApp, nor shall Vite Labs be liable for its use.";
 
@@ -188,6 +188,7 @@
 "my.page.invite.cell.title" = "Mining Referrals";
 "my.page.reward.cell.title" = "Rewards Enquiry";
 "my.page.forum.cell.title" = "Official Forum";
+"my.page.tutorial.cell.title" = "Tutorial";
 "my.page.aboutUs.cell.title" = "About Us";
 "my.page.change.wallet.name.alter.title" = "Edit Account Name";
 "my.page.aboutUs.wechat.alert.title" = "Scan QR code to follow Vite WeChat Official Account";
@@ -360,7 +361,7 @@
 "system.page.cell.login.pwd" = "Auto-Lock";
 "system.page.cell.login.faceId" = "Face ID";
 "system.page.cell.login.touchId" = "Touch ID";
-"system.page.cell.logout.title" = "Logout/switch wallet";
+"system.page.cell.logout.title" = "Logout";
 "system.page.cell.upload.log.title" = "Upload Log";
 "system.page.cell.upload.log.toast.success" = "Log Uploaded";
 "system.page.cell.delete.wallet.title" = "Delete Current Account";
@@ -1189,7 +1190,7 @@
 "mining.trading.page.header.total.earnings" = "Total Income (VX)";
 "mining.trading.page.header.total.earnings.alert.title" = "Notice";
 "mining.trading.page.header.total.earnings.alert.message" = "Current trading fees displayed on this page contains only the 0.2% ViteX base transaction fees, please note that operator fees shall be taken into consideration when calculating mining cost";
-
+ 
 
 "mining.trading.page.header.fee" = "Trading Fees";
 "mining.trading.page.header.title" = "Mining";
