--- a/ViteBusiness/Assets/id-ID.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/id-ID.lproj/Localizable.strings
@@ -96,8 +96,8 @@
 /* mnemonic */
 "mnemonic.backup.page.title" = "Mnemonic Words Backup";
 "mnemonic.backup.page.tip1" = "We recommend the two following backup methods:";
-"mnemonic.backup.page.tip2" = "Write down mnemonic words on a piece of paper, then keep it in a safe place.";
-"mnemonic.backup.page.tip3" = "Scan the QR code below using the Vite wallet installed on another device.";
+"mnemonic.backup.page.tip2" = "Write down your seed phrase on a piece of paper and keep it in a safe place.";
+"mnemonic.backup.page.tip3" = "Scan the QR code below with your Vite app installed on another device.";
 "mnemonic.backup.language.zh" = "中";
 "mnemonic.backup.language.en" = "EN";
 
@@ -570,7 +570,7 @@
 "contacts.edit.page.delete.alert.title" = "Are you sure to delete this address?";
 
 // Address List
-"address.list.page.my.title" = "My VITE Address";
+"address.list.page.my.title" = "My Vite Address";
 "address.list.page.other.title" = "%@ contact address";
 "address.list.page.no.address.tip" = "No %@ address yet";
 
