--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "discover.page.headerTitle.activity"="Ecosystem";
 "discover.page.headerTitle.game"="DApps";
 "discover.page.headerTitle.news"="News";
-"discover.page.VCWebTitle.activity"="Vite Events";
+"discover.page.VCWebTitle.activity"="Ecosystem";
 "discover.page.VCWebTitle.game"="DApps";
 "discover.page.VCWebTitle.news"="News";
 "discover.page.game.alter.title"="You have visited a page which leaves Vite App, and you will be redirected to a third party dApp. Your use on this dApp will abide by the dApp's Term of User Agreement and Privacy Policy. Vite Labs has no supervision or control over the quality, content, reliability or security of the third party dApp, nor shall Vite Labs be liable for its use.";
