--- a/ViteBusiness/Assets/tr-TR.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/tr-TR.lproj/Localizable.strings
@@ -369,6 +369,8 @@
 
 /* node settings */
 "node.settings.page.title" = "Düğüm Ayarları";
+"node.settings.page.switch.node.alert.title" = "Notice";
+"node.settings.page.switch.node.alert.message" = "The current node is %1$@, and will be switched to %2$@. After switching, the App will be automatically closed, and you need to reopen the App.";
 "node.settings.page.add.button.title" = "Özel Düğüm Ekle";
 "node.settings.page.add.alert.title" = "Lütfen geçerli bir düğüm adresi girin";
 "node.settings.page.add.alert.tip" = "Güncel düğümünüz %@, ağınız ise ana ağ";
